@startuml
' Définition des couleurs pour les entités et relations
skinparam entity {
  BackgroundColor #FFCC99
  BorderColor #B8860B
  FontColor #000000
}

skinparam entityAttribute {
  BackgroundColor #F0E68C
  BorderColor #B8860B
}

skinparam entityRelationship {
  BackgroundColor #FFD700
  ArrowColor #FF4500
}

' Définition des entités avec leurs attributs
entity "USER" as user {
  + codeUser : INT
  name : TEXT
  email : TEXT
  password : TEXT
  confirmPassword : TEXT
  --
  + codeRole : INT
  + codeStatus : INT
}

entity "RECIPE" as recipe {
  + codeRecipe : INT
  title : TEXT
  description : TEXT
  anecdote : TEXT
  source : TEXT
  image : TEXT
  --
  + codeCategory : INT
  + codeIngredient : INT
  + codeInstruction : INT
}

entity "CATEGORY" as category {
  + codeCategory : INT
  name : TEXT
}

entity "COMMENT" as comment {
  + codeComment : INT
  content : TEXT
  --
  + codeUser : INT
  + codeRecipe : INT
}

entity "SCORE" as score {
  + codeScore : INT
  score : INT
  --
  + codeUser : INT
  + codeRecipe : INT
}

entity "ROLE" as role {
  + codeRole : INT
  roleName : TEXT
}

entity "INGREDIENT" as ingredient {
  + codeIngredient : INT
  name : TEXT
  quantity : FLOAT
  quantityDescription : TEXT
  unit : TEXT
}

entity "INSTRUCTION" as instruction {
  + codeInstruction : INT
  stepNumber : INT
  instruction : TEXT
}

' Relations entre les entités
user }|--|| role : "HAVE"
user }|--|{ recipe : "CREATE"
user }|--|| comment : "LEAVE"
user ||--|{ score : "GIVE"
recipe ||--|{ category : "ASSOCIATE"
score }o--|{ recipe : "RECEIVE"
comment }o--|{ recipe : "ACCEPT"
recipe }|--|{ ingredient : "CONTAIN"
recipe ||--|{ instruction : "POSSESS"
@enduml